<resources>
    <string name="app_name">Активні парки</string>
    <string name="title_home">Головна</string>
    <string name="title_maps">Мапа</string>
    <string name="title_scaner">Сканep</string>
    <string name="title_notifications">Сповіщення</string>
    <string name="title_activity">Активності</string>
    <string name="title_user">Користувач</string>
    <string name="title_profile">Профіль</string>
    <string name="title_activity_notification">notification</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string-array name="sex">
        <item>Чоловік</item>
        <item>Жінка</item>
    </string-array>
    <string name="title_activity_test_update">TestUpdate</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="crop_image_activity_title">Зображення</string>
    <string name="crop_image_menu_rotate_left">Повернути ліворуч</string>
    <string name="crop_image_menu_rotate_right">Повернути праворуч</string>
    <string name="crop_image_menu_crop">Обрізати</string>
    <string name="crop_image_menu_flip">Відобразити</string>
    <string name="crop_image_menu_flip_horizontally">Відобразити по горизонталі</string>
    <string name="crop_image_menu_flip_vertically">Відобразити по вертикалі</string>
    <string name="pick_image_intent_chooser_title">Вибрати джерело</string>
    <string name="crop_image_activity_no_permissions">Скасовується, необхідні дозволи не надаються</string>
    <string name="material_calendar_monday">Пн</string>
    <string name="material_calendar_tuesday">Вт</string>
    <string name="material_calendar_wednesday">Ср</string>
    <string name="material_calendar_thursday">Чт</string>
    <string name="material_calendar_friday">Пт</string>
    <string name="material_calendar_saturday">Сб</string>
    <string name="material_calendar_sunday">Нд</string>
    <string name="material_calendar_today_button">Сьогодні</string>
    <string name="material_calendar_positive_button">ОК</string>
    <string name="cansel">Відмінити</string>
    <string name="tv_start_moving">Почати рух</string>
    <string name="tv_duration">Тривалість</string>
    <string name="tv_reset_time">00:00:00</string>
    <string name="tv_0">0</string>
    <string name="tv_distance_km">Дистанція (км)</string>
    <string name="tv_kkal">Калорії (ккал)</string>
    <string name="tv_average_temp">Ср. темп (мин/км)</string>
    <string name="tv_close">Закрити</string>
    <string name="tv_select_activity">Оберіть активність</string>
    <string name="tv_activity_on_the_street">Активності на вулиці:</string>
    <string name="tv_activity_on_the_home">Активності в приміщенні:</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tv_choose_the_level_of_activity">Оберіть ступінь активності:</string>
    <string name="tv_activity_type">Тип активності</string>
    <string name="tv_pulse_zone">Зони пульсу</string>
    <string name="tv_pulse">Пульс</string>
    <string name="tvPulseDevise">Пульсометр</string>
    <string name="tv_auto_pause">Автопауза</string>
    <string name="tv_audio">Аудіо підказка</string>
    <string name="tv_late_start">3 сек. відлік старту</string>
    <string name="tv_feel_description">Вкажіть, як ви себе почуваєте після тренування</string>
    <string name="tv_save">Зберегти</string>
    <string name="tv_save_change">Зберегти зміни</string>
    <string name="tv_delete_training"><u>Видалити тренування</u></string>
    <string name="title_activity_for">ActivityForActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="tv_add_pulse_gadget">Оберіть пульсометр</string>
    <string name="tv_pause">Режим автопаузи</string>
    <string name="tv_swipe_to_pause">Натисніть для паузи</string>
    <string name="tv_continue">Продовжити</string>
    <string name="tv_end">Завершити</string>
    <string name="tv_auto_block_screen">Вимкнути автоблокування екрану</string>
    <string name="tv_training_title">Назва тренування</string>
    <string name="tv_address_not_found">Адресу не знайдено</string>
    <string name="tv_start_activity_speak">Початок тренування</string>
    <string name="calendar_event">Календар заходів</string>
    <string name="create_event">Створення заходу</string>
    <string name="event_on_map">Захід на мапі</string>
    <string name="event_name">Назва</string>
    <string name="short_description">Короткий опис</string>
    <string name="full_description">Повний опис заходу</string>
    <string name="start_data">Початок заходу</string>
    <string name="end_data">Закінчення заходу</string>
    <string name="choose_event">Вибір типу заходу*</string>
    <string name="load_cover">Завантажити обкладинку</string>
    <string name="event_cover">Обкладинка Заходу</string>
    <string name="main_cover">Головне фото заходу</string>
    <string name="extra_cover">Додаткові фото</string>
    <string name="name_and_description">Назва та опис</string>
    <string name="necessary_field">обовязково для заповнення*</string>
    <string name="save_changes">Зберегти зміни</string>
    <string name="event_adress">Адреса заходу</string>
    <string name="date_and_time">Дата та час</string>
    <string name="choose_type">Виберіть тип заходу</string>
    <string name="with_route">З маршрутом</string>
    <string name="simple">Звичайний</string>
    <string name="online_training">Онлайн тренування</string>
    <string name="tv_swipe_to_refresh">Змахніть для оновлення данних</string>
    <string name="tv_search_in_progress">Триває пошук</string>
    <string name="icon">icon</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="text_counter">0/255</string>
    <string name="tv_registration">Реєстрація</string>
    <string name="tv_authorization">Авторизуватися</string>
    <string name="tv_else_method">або увійти за допомогою</string>
    <string name="tv_enter">Увійти</string>
    <string name="tv_show"><u>Переглянути</u></string>
    <string name="tv_refresh_access"><u>Відновити доступ</u></string>
    <string name="tv_db">База знань</string>
    <string name="tv_forgot_pass">Забули пароль?</string>
    <string name="tv_hint_pass">Пароль</string>
    <string name="tv_hint_email">Пошта</string>
    <string name="tv_hint_email_phone">Email, телефон або нікнейм</string>
    <string name="tv_welcome_back">Вітаємо з поверненням</string>
    <string name="tv_enter_password">Відновити пароль</string>
    <string name="tv_forgot_pass_desc">Вкажіть ввідні дані, щоб ми могли допомогти Вам з відновленням паролю</string>
    <string name="tv_enter_sms">Введіть код з СМС</string>
    <string name="tv_enter_email">Введіть код з листа</string>
    <string name="tv_not_recived_sms">Не отримали жодного коду?</string>
    <string name="tv_new_password">Новий пароль</string>
    <string name="tv_regex_password">Мінімум 8 символів. Пароль повинен містити цифри, та літери верхнього та нижнього регістру</string>
    <string name="tv_re_password">Підтвердіть пароль</string>
    <string name="tv_next_step">Перейти далі</string>
    <string name="tv_to_enter" type="id">До входу</string>
    <string name="tv_registration_description">Пройдіть реєстрацію, та приєднайтеся до Активних парків</string>
    <string name="tv_phone">Телефон</string>
    <string name="tv_nick">Нікнейм</string>
    <string name="tv_verification">Верифікація</string>
    <string name="tv_description_sms_code">Введіть код, який прийшов на введений вами телефон</string>
    <string name="tv_description_email_code">Введіть код, який прийшов на введений вами пошту</string>
    <string name="tv_last_name">Прізвище</string>
    <string name="tv_firts_name">Ім\'я</string>
    <string name="tv_end_registration">Завершити реєстрацію</string>
    <string name="tv_additional_title">Додаткові дані</string>
    <string name="tv_additional_data_description">Вкажіть вашу пошту та як до вас можна звертатися</string>
    <string name="tv_additional_value_description">Вкажіть ваші фізичні дані та дату народження</string>
    <string name="tv_select_weight">Виберіть вагу (кг)</string>
    <string name="tv_select_pulse_zone_value">Виберіть значення (уд/хв)</string>
    <string name="tv_ok">OK</string>
    <string name="tv_weight_picker">%s кг</string>
    <string name="tv_pulse_zone_picker">%s уд/хв</string>
    <string name="tv_select_height_picker">Виберіть зріст (см)</string>
    <string name="tv_height_picker">%s см</string>
    <string name="index">0</string>
    <string name="x">x</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="event_not_publish">Подія не опублікована</string>
    <string name="save_druft">Зберегти подію як чернетку?</string>
    <string name="tv_somsing_went_wrong">Шось пішло не так :(</string>
    <string name="clubs">Клуби</string>
    <string name="events">Заходи</string>
    <string name="statistic">Статистика</string>
    <string name="video">Відео</string>
    <string name="healse">Здоров\'я</string>
    <string name="week">Тиждень</string>
    <string name="month">Місяць</string>
    <string name="year">Рік</string>
    <string name="all_the_time">Весь час</string>
    <string name="profile">Профіль</string>
    <string name="tv_sms_timer">Отримати код знову можна через: %s сек.</string>
    <string name="tv_skip">Пропустити</string>
    <string name="tv_dialog_on_pause_activity">Зараз іде тренування. Хочете вийти і поставити на паузу?</string>
    <string name="tv_yes">Так</string>
    <string name="tv_no">Ні</string>
    <string name="add_access_to_photo">Додайте доступ до фото</string>
    <string name="add_access_to_camera">Додайте доступ до камери</string>
    <string name="date_later_end">Дата початку не може починатись пізніше ніж дата закінчення</string>
    <string name="date_before_current">Захід не може починатися раніше поточної дати</string>
    <string name="tv_main_title">ГОЛОВНА</string>
    <string name="tv_user_title">Вітаємо тебе,</string>
    <string name="tv_menu_events">Заходи</string>
    <string name="tv_menu_location">Локації</string>
    <string name="tv_menu_blog">Блог</string>
    <string name="tv_menu_blogs">Блоги</string>
    <string name="tv_menu_clubs">Клуби</string>
    <string name="tv_events_calendar"><u>Календар заходів</u></string>
    <string name="tv_all_parks"><u>Показати перелік активних парків</u></string>
    <string name="tv_all_news"><u>Перейти до всіх новин</u></string>
    <string name="tv_all_clubs"><u>Перейти до всіх клубів</u></string>
    <string name="tv_more"><u>Більше</u></string>
    <string name="tv_my_events">Мої заходи</string>
    <string name="tv_title_active_parks">Активні парки</string>
    <string name="tv_distance">Дистанція %s</string>
    <string name="tv_distance_">Дистанція</string>
    <string name="tv_no_clubs">Клуби відсутні</string>
    <string name="tv_no_events">Заходи відсутні</string>
    <string name="tv_statistic">Статистика</string>
    <string name="tv_video">Відео</string>
    <string name="tv_heals">Здоров’я</string>
    <string name="all_activities">Всі активності</string>
    <string name="review">Огляд</string>
    <string name="activities">Активності</string>
    <string name="tv_event_new">Захід не розпочався</string>
    <string name="about_event">Про захід</string>
    <string name="participants">Учасники</string>
    <string name="gallery">Галерея</string>
    <string name="volunteer_support">Підтримка добровольців</string>
    <string name="data_time">28/08/22 | 12:00 – 14:00</string>
</resources>