<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_map"
        android:title="@string/title_maps" />

    <item
        android:id="@+id/navigation_scaner"
        android:icon="@drawable/ic_scaner"
        android:title="Сканер" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_person"
        android:title="@string/title_user" />
</menu>