<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_about_event">

    <fragment
        android:id="@+id/nav_about_event"
        android:name="com.app.activeparks.ui.event.fragments.AboutEventFragment"
        android:label="@string/about_event"
        tools:layout="@layout/fragment_about_event"/>

    <fragment
        android:id="@+id/nav_participant"
        android:name="com.app.activeparks.ui.participants.ParticipantsFragment"
        android:label="@string/participants"
        tools:layout="@layout/fragment_event_participant" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.app.activeparks.ui.gallery.GalleryEventFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_gallery" >

    </fragment>

</navigation>