<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:elevation="0dp">

    <ImageView
        android:id="@+id/photo"
        android:contentDescription="@string/icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/preview_one" />

    <ImageView
        android:id="@+id/gradient"
        android:contentDescription="@string/icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/shadow_gradient" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/status_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/tv_event_new"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/name_event"
            app:layout_constraintStart_toEndOf="@+id/grean_square" />

        <ImageView
            android:id="@+id/grean_square"
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/shape_green"
            app:layout_constraintBottom_toTopOf="@+id/name_event"
            app:layout_constraintStart_toStartOf="@+id/name_event"
            app:layout_constraintTop_toTopOf="@+id/status_event" />

        <TextView
            android:id="@+id/name_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/volunteer_support"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/date"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_time"
            android:textColor="@color/tv_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/endTimeEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/tv_description"
            app:layout_constraintBottom_toBottomOf="@+id/date"
            app:layout_constraintStart_toEndOf="@+id/date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


